--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <video controls autoplay>
     <source src="NP=P.mp4" type="video/mp4">
-    Tis video is made for the last version of our paper.
+    This video is made for the last version of our paper.
   </video>
 </body>
 </html>
