--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem"</title>
+  <title>The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (
+https://doi.org/10.48550/arXiv.2108.03877)</title>
 </head>
 <body>
   <video controls autoplay>
