--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NP=P video</title>
+  <title>NP=P Online Tutorials</title>
 </head>
 <body>
 	<div>
-        The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (https://doi.org/10.48550/arXiv.2108.03877). 
-This video is made for the last version of our paper.     
+        The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (https://doi.org/10.48550/arXiv.2108.03877).     
     </div>
-  <video controls autoplay>
-    <source src="https://media.githubusercontent.com/media/holdenwool/PvsNP/refs/heads/main/NP%3DP.mp4" type="video/mp4">
-  </video>
+	
+	<div>
+        Made for the last version of the paper.
+    </div>
+	
+	<video controls="controls" autoplay="autoplay" width="500" height="300">
+		<source src="https://media.githubusercontent.com/media/tcsrepositories/PvsNP/refs/heads/main/NP%3DP.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
 </body>
 </html>
