--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NP=P Online Tutorials</title>
+  <title>NP=P Online Tutorial</title>
 </head>
 <body>
 	<div>
-        The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (https://doi.org/10.48550/arXiv.2108.03877).     
+        <h1 class="title-article" id="articleContentId">NP=P Online Tutorial</h1>
     </div>
 	
 	<div>
-        Made for the last version of the paper.
+	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem".<br></p>  
+	    <a href="https://doi.org/10.48550/arXiv.2108.03877">(https://doi.org/10.48550/arXiv.2108.03877)</a>
+		<p style="text-align:left;">Made for the last version of the paper.<br></p>  
     </div>
 	
-	<video controls="controls" autoplay="autoplay" width="500" height="300">
+	<video controls="controls" autoplay="autoplay" width="750" height="400">
 		<source src="https://media.githubusercontent.com/media/tcsrepositories/PvsNP/refs/heads/main/NP%3DP.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
