--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem".<br></p>  
 	    <a href="https://doi.org/10.48550/arXiv.2108.03877">(https://doi.org/10.48550/arXiv.2108.03877)</a> 
 		
-		<a href="https://github.com/tcsrepositories/PvsNP/blob/fd12ae4f66bf78b678ac69dc5a7df0fd013601d5/arXiv-final-NP%3DP.pdf"> (Better-formatted pdf version).</a>
+		<a href="https://github.com/tcsrepositories/PvsNP/blob/fd12ae4f66bf78b678ac69dc5a7df0fd013601d5/arXiv-final-NP%3DP.pdf"> (A better-formatted and more up-to-date pdf version than arxiv).</a>
 		
-		<p style="text-align:left;">Video is made for the last version of the paper.<br></p>  
+		<p style="text-align:left;">Video is made for an earlier version of the paper.<br></p>  
     </div>
 	
 	<video controls="controls" autoplay="autoplay" width="750" height="400">
