--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     </div>
 	
 	<div>
-	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem".<br></p>  
-	    <a href="https://doi.org/10.48550/arXiv.2108.03877">(https://doi.org/10.48550/arXiv.2108.03877)</a> 
+	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" 
+	    <a href="https://doi.org/10.48550/arXiv.2108.03877">(arXiv.2108:03877)</a>.</p> 
 		
-		<a href="https://github.com/tcsrepositories/PvsNP/blob/fd12ae4f66bf78b678ac69dc5a7df0fd013601d5/arXiv-final-NP%3DP.pdf"> (A better-formatted and more up-to-date pdf version than arxiv).</a>
+		<p style="text-align:left;">A better-formatted and more up-to-date pdf version than arxiv is available 
+		<a href="https://github.com/tcsrepositories/PvsNP/blob/fd12ae4f66bf78b678ac69dc5a7df0fd013601d5/arXiv-final-NP%3DP.pdf">here</a>.<br></p>
 		
 		<p style="text-align:left;">Video is made for an earlier version of the paper.<br></p>  
     </div>
