--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<p style="text-align:left;">Video is made for an earlier version of the paper.<br></p>  
 		
 		<p style="text-align:left;">Motivating running instances (K-SAT) of the ZH algorithm is available 
-		<a href="https://github.com/tcsrepositories/PvsNP/blob/f2a5c979f8415f227243264008944f0767713761/Motivating%20running%20instances.pdf">here</a>.<br></p>
+		<a href="https://github.com/tcsrepositories/PvsNP/blob/9566518be8bbe3dc434a331f07e00e247de2a7f7/Motivating_running_instances.pdf">here</a>.<br></p>
     </div>
 	
 	<video controls="controls" autoplay="autoplay" width="750" height="400">
