--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 	
 	<div>
 	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (
-	    <a href="https://doi.org/10.48550/arXiv.2108.03877">arXiv.2108:03877</a>, a better-formatted and more up-to-date version than arxiv is available 
-		<a href="https://github.com/tcsrepositories/PvsNP/blob/fd12ae4f66bf78b678ac69dc5a7df0fd013601d5/arXiv-final-NP%3DP.pdf">here</a>).<br></p>
+	    <a href="https://doi.org/10.48550/arXiv.2108.03877">arXiv.2108:03877</a>; a better-formatted and more up-to-date version than arxiv is available 
+		<a href="https://github.com/tcsrepositories/PvsNP/blob/d7a381c2513216870ae6b290da8bb00040255b30/arXiv-final-NP%3DP.pdf">here</a>).<br></p>
 		
 		<p style="text-align:left;">Video is made for an earlier version of the paper.<br></p>  
 		
 		<p style="text-align:left;">Motivating running instances (K-SAT) of the ZH algorithm is provided 
 		<a href="https://github.com/tcsrepositories/PvsNP/blob/9566518be8bbe3dc434a331f07e00e247de2a7f7/Motivating_running_instances.pdf">here</a>.<br></p>
+		
     </div>
 	
 	<video controls="controls" autoplay="autoplay" width="750" height="400">
