--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div>
 	    <p style="text-align:left;">The video for the paper "A Polynomial-Time Deterministic Algorithm for An NP-Complete Problem" (
 	    <a href="https://doi.org/10.48550/arXiv.2108.03877">arXiv.2108:03877</a>; a better-formatted and more up-to-date version than arxiv is available 
-		<a href="https://github.com/tcsrepositories/PvsNP/blob/d7a381c2513216870ae6b290da8bb00040255b30/arXiv-final-NP%3DP.pdf">here</a>).<br></p>
+		<a href="https://github.com/tcsrepositories/PvsNP/blob/a48715f8000ea596fceb9e7578c77843efefc298/latestpaper.pdf">here</a>).<br></p>
 		
 		<p style="text-align:left;">Video is made for an earlier version of the paper.<br></p>  
 		
